PaniciSoftware.FastTemplate/Common/TemplateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g 2014-06-25 13:41:08

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


    // The variable 'name' is declared but never used
    #pragma warning disable 168
        

using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  PaniciSoftware.FastTemplate.Common 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class TemplateParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Literal", "EStart", "MStart", "Prop", "EPass", "MPass", "EQ", "NEQ", "LE", "GE", "LT", "GT", "OR", "AND", "Add", "Minus", "Div", "Mul", "Mod", "RP", "LP", "RBrace", "LBrace", "RBracket", "LBracket", "SignedLong", "Float", "Assign", "StringLiteral", "DynamicString", "UnsignedInteger", "Double", "Hex", "Decimal", "Comma", "Unparsed", "LoopDirective", "If", "ElseIf", "Else", "Loop", "Foreach", "Set", "Parse", "Include", "Keyword", "Root", "End", "True", "False", "As", "To", "Step", "In", "Null", "Break", "Stop", "Not", "Inc", "Dec", "Continue", "UnexpectedChar", "Integer", "Assert", "Pragma", "Block", "ConstDict", "ConstList", "Constant", "Control", "DefaultBlock", "Document", "Empty", "Error", "FnArgs", "Indexer", "Invoke", "LoopArgs", "Nested", "Passthrough", "Plus", "Statement", "TargetedBlock", "Unary"
	};
	public const int EOF=-1;
	public const int Literal=4;
	public const int EStart=5;
	public const int MStart=6;
	public const int Prop=7;
	public const int EPass=8;
	public const int MPass=9;
	public const int EQ=10;
	public const int NEQ=11;
	public const int LE=12;
	public const int GE=13;
	public const int LT=14;
	public const int GT=15;
	public const int OR=16;
	public const int AND=17;
	public const int Add=18;
	public const int Minus=19;
	public const int Div=20;
	public const int Mul=21;
	public const int Mod=22;
	public const int RP=23;
	public const int LP=24;
	public const int RBrace=25;
	public const int LBrace=26;
	public const int RBracket=27;
	public const int LBracket=28;
	public const int SignedLong=29;
	public const int Float=30;
	public const int Assign=31;
	public const int StringLiteral=32;
	public const int DynamicString=33;
	public const int UnsignedInteger=34;
	public const int Double=35;
	public const int Hex=36;
	public const int Decimal=37;
	public const int Comma=38;
	public const int Unparsed=39;
	public const int LoopDirective=40;
	public const int If=41;
	public const int ElseIf=42;
	public const int Else=43;
	public const int Loop=44;
	public const int Foreach=45;
	public const int Set=46;
	public const int Parse=47;
	public const int Include=48;
	public const int Keyword=49;
	public const int Root=50;
	public const int End=51;
	public const int True=52;
	public const int False=53;
	public const int As=54;
	public const int To=55;
	public const int Step=56;
	public const int In=57;
	public const int Null=58;
	public const int Break=59;
	public const int Stop=60;
	public const int Not=61;
	public const int Inc=62;
	public const int Dec=63;
	public const int Continue=64;
	public const int UnexpectedChar=65;
	public const int Integer=66;
	public const int Assert=67;
	public const int Pragma=68;
	public const int Block=69;
	public const int ConstDict=70;
	public const int ConstList=71;
	public const int Constant=72;
	public const int Control=73;
	public const int DefaultBlock=74;
	public const int Document=75;
	public const int Empty=76;
	public const int Error=77;
	public const int FnArgs=78;
	public const int Indexer=79;
	public const int Invoke=80;
	public const int LoopArgs=81;
	public const int Nested=82;
	public const int Passthrough=83;
	public const int Plus=84;
	public const int Statement=85;
	public const int TargetedBlock=86;
	public const int Unary=87;

	public TemplateParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TemplateParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TemplateParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g"; } }


	    public ErrorList Errors { get; set; }

	    public override void DisplayRecognitionError(string[] tokenNames, RecognitionException e)
	    {
	        var header = GetErrorHeader(e);
	        var message = GetErrorMessage(e, tokenNames);
	        Errors.ErrorRecognition( header, message );
	        this.EmitErrorMessage( header + " " + message );
	    }

	    public override string GetErrorMessage(RecognitionException e, string[] tokenNames)
	    {
	      string str1 = e.Message;
	      if (e is UnwantedTokenException)
	      {
	        UnwantedTokenException unwantedTokenException = (UnwantedTokenException) e;
	        string str2 = unwantedTokenException.Expecting != -1 ? tokenNames[unwantedTokenException.Expecting] : "EndOfFile";
	        str1 = "extraneous input " + this.GetTokenErrorDisplay(unwantedTokenException.UnexpectedToken) + " expecting " + str2;
	      }
	      else if (e is MissingTokenException)
	      {
	        MissingTokenException missingTokenException = (MissingTokenException) e;
	        str1 = "missing " + (missingTokenException.Expecting != -1 ? tokenNames[missingTokenException.Expecting] : "EndOfFile") + " at " + this.GetTokenErrorDisplay(e.Token);
	      }
	      else if (e is MismatchedTokenException)
	      {
	        MismatchedTokenException mismatchedTokenException = (MismatchedTokenException) e;
	        string str2 = mismatchedTokenException.Expecting != -1 ? tokenNames[mismatchedTokenException.Expecting] : "EndOfFile";
	        str1 = "mismatched input " + this.GetTokenErrorDisplay(e.Token) + " expecting " + str2;
	      }
	      else if (e is MismatchedTreeNodeException)
	      {
	        MismatchedTreeNodeException treeNodeException = (MismatchedTreeNodeException) e;
	        string str2 = treeNodeException.Expecting != -1 ? tokenNames[treeNodeException.Expecting] : "EndOfFile";
	        str1 = "mismatched tree node: " + (treeNodeException.Node != null ? treeNodeException.Node.ToString() ?? string.Empty : string.Empty) + " expecting " + str2;
	      }
	      else if (e is NoViableAltException)
	        str1 = "no viable alternative at input " + this.GetTokenErrorDisplay(e.Token);
	      else if (e is EarlyExitException)
	        str1 = "required (...)+ loop did not match anything at input " + this.GetTokenErrorDisplay(e.Token);
	      else if (e is MismatchedSetException)
	      {
	        MismatchedSetException mismatchedSetException = (MismatchedSetException) e;
	        str1 = string.Concat(new object[4]
	        {
	          (object) "mismatched input ",
	          (object) this.GetTokenErrorDisplay(e.Token),
	          (object) " expecting set ",
	          (object) mismatchedSetException.Expecting
	        });
	      }
	      else if (e is MismatchedNotSetException)
	      {
	        MismatchedNotSetException mismatchedNotSetException = (MismatchedNotSetException) e;
	        str1 = string.Concat(new object[4]
	        {
	          (object) "mismatched input ",
	          (object) this.GetTokenErrorDisplay(e.Token),
	          (object) " expecting set ",
	          (object) mismatchedNotSetException.Expecting
	        });
	      }
	      else if (e is FailedPredicateException)
	      {
	        FailedPredicateException predicateException = (FailedPredicateException) e;
	        str1 = "rule " + predicateException.RuleName + " failed predicate: {" + predicateException.PredicateText + "}?";
	      }
	      return str1;
	    }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_document();
	partial void LeaveRule_document();

	// $ANTLR start "document"
	// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:1: public document : ( section )* EOF -> ^( Document ( section )* ) ;
	[GrammarRule("document")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> document()
	{
		EnterRule_document();
		EnterRule("document", 1);
		TraceIn("document", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken EOF2 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> section1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree EOF2_tree = default(CommonTree);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_section=new RewriteRuleSubtreeStream(adaptor,"rule section");
		try { DebugEnterRule(GrammarFileName, "document");
		DebugLocation(142, 48);
		try
		{
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:9: ( ( section )* EOF -> ^( Document ( section )* ) )
			DebugEnterAlt(1);
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:11: ( section )* EOF
			{
			DebugLocation(142, 11);
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:11: ( section )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if (((LA1_0>=Literal && LA1_0<=MStart)||(LA1_0>=EPass && LA1_0<=MPass)||LA1_0==Unparsed||LA1_0==If||(LA1_0>=Loop && LA1_0<=Include)||(LA1_0>=Break && LA1_0<=Stop)||LA1_0==Continue||(LA1_0>=Assert && LA1_0<=Pragma)))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:11: section
					{
					DebugLocation(142, 11);
					PushFollow(Follow._section_in_document226);
					section1=section();
					PopFollow();

					stream_section.Add(section1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(142, 20);
			EOF2=(CommonToken)Match(input,EOF,Follow._EOF_in_document229);  
			stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: section
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 142:24: -> ^( Document ( section )* )
			{
				DebugLocation(142, 27);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:27: ^( Document ( section )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(142, 30);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Document, "Document"), root_1);

				DebugLocation(142, 39);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:142:39: ( section )*
				while ( stream_section.HasNext )
				{
					DebugLocation(142, 39);
					adaptor.AddChild(root_1, stream_section.NextTree());

				}
				stream_section.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("document", 1);
			LeaveRule("document", 1);
			LeaveRule_document();
		}
		DebugLocation(142, 48);
		} finally { DebugExitRule(GrammarFileName, "document"); }
		return retval;

	}
	// $ANTLR end "document"

	partial void EnterRule_block();
	partial void LeaveRule_block();

	// $ANTLR start "block"
	// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:1: block : ( section )* -> ^( Block ( section )* ) ;
	[GrammarRule("block")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		TraceIn("block", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> section3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_section=new RewriteRuleSubtreeStream(adaptor,"rule section");
		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(144, 38);
		try
		{
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:6: ( ( section )* -> ^( Block ( section )* ) )
			DebugEnterAlt(1);
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:8: ( section )*
			{
			DebugLocation(144, 8);
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:8: ( section )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if (((LA2_0>=Literal && LA2_0<=MStart)||(LA2_0>=EPass && LA2_0<=MPass)||LA2_0==Unparsed||LA2_0==If||(LA2_0>=Loop && LA2_0<=Include)||(LA2_0>=Break && LA2_0<=Stop)||LA2_0==Continue||(LA2_0>=Assert && LA2_0<=Pragma)))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:8: section
					{
					DebugLocation(144, 8);
					PushFollow(Follow._section_in_block247);
					section3=section();
					PopFollow();

					stream_section.Add(section3.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }



			{
			// AST REWRITE
			// elements: section
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 144:17: -> ^( Block ( section )* )
			{
				DebugLocation(144, 20);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:20: ^( Block ( section )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(144, 23);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Block, "Block"), root_1);

				DebugLocation(144, 29);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:144:29: ( section )*
				while ( stream_section.HasNext )
				{
					DebugLocation(144, 29);
					adaptor.AddChild(root_1, stream_section.NextTree());

				}
				stream_section.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
		}
		DebugLocation(144, 38);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return retval;

	}
	// $ANTLR end "block"

	partial void EnterRule_section();
	partial void LeaveRule_section();

	// $ANTLR start "section"
	// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:146:1: section : ( statement -> ^( Statement statement ) | passthrough -> ^( Passthrough passthrough ) | Literal -> Literal | Unparsed -> Unparsed | control -> ^( Control control ) );
	[GrammarRule("section")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> section()
	{
		EnterRule_section();
		EnterRule("section", 3);
		TraceIn("section", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken Literal6 = default(CommonToken);
		CommonToken Unparsed7 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> statement4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> passthrough5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> control8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree Literal6_tree = default(CommonTree);
		CommonTree Unparsed7_tree = default(CommonTree);
		RewriteRuleITokenStream stream_Unparsed=new RewriteRuleITokenStream(adaptor,"token Unparsed");
		RewriteRuleITokenStream stream_Literal=new RewriteRuleITokenStream(adaptor,"token Literal");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
		RewriteRuleSubtreeStream stream_control=new RewriteRuleSubtreeStream(adaptor,"rule control");
		RewriteRuleSubtreeStream stream_passthrough=new RewriteRuleSubtreeStream(adaptor,"rule passthrough");
		try { DebugEnterRule(GrammarFileName, "section");
		DebugLocation(146, 4);
		try
		{
			// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:147:5: ( statement -> ^( Statement statement ) | passthrough -> ^( Passthrough passthrough ) | Literal -> Literal | Unparsed -> Unparsed | control -> ^( Control control ) )
			int alt3=5;
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case EStart:
			case MStart:
				{
				alt3 = 1;
				}
				break;
			case EPass:
			case MPass:
				{
				alt3 = 2;
				}
				break;
			case Literal:
				{
				alt3 = 3;
				}
				break;
			case Unparsed:
				{
				alt3 = 4;
				}
				break;
			case If:
			case Loop:
			case Foreach:
			case Set:
			case Parse:
			case Include:
			case Break:
			case Stop:
			case Continue:
			case Assert:
			case Pragma:
				{
				alt3 = 5;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:147:7: statement
				{
				DebugLocation(147, 7);
				PushFollow(Follow._statement_in_section271);
				statement4=statement();
				PopFollow();

				stream_statement.Add(statement4.Tree);


				{
				// AST REWRITE
				// elements: statement
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (CommonTree)adaptor.Nil();
				// 147:17: -> ^( Statement statement )
				{
					DebugLocation(147, 20);
					// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:147:20: ^( Statement statement )
					{
					CommonTree root_1 = (CommonTree)adaptor.Nil();
					DebugLocation(147, 23);
					root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Statement, "Statement"), root_1);

					DebugLocation(147, 33);
					adaptor.AddChild(root_1, stream_statement.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:148:7: passthrough
				{
				DebugLocation(148, 7);
				PushFollow(Follow._passthrough_in_section289);
				passthrough5=passthrough();
				PopFollow();

				stream_passthrough.Add(passthrough5.Tree);


				{
				// AST REWRITE
				// elements: passthrough
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (CommonTree)adaptor.Nil();
				// 148:19: -> ^( Passthrough passthrough )
				{
					DebugLocation(148, 22);
					// C:\\Projects\\FastTemplate\\etc\\grammar\\TemplateParser.g:148:22: ^( Passthrough passthrough )
					{
					CommonTree root_1 = (CommonTree)adaptor.Nil();
					DebugLocation(148, 25);
					root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(Passthrough, "Passthrough"), root_1);

					DebugLocation(148, 37);
					adaptor.AddChild(root_1, stream_passthrough.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
